# cookiecutter-gaffa-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
src/{{cookiecutter.project_name}}/: README.md
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: tests.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
