[tool.poetry]

name = "flucto-octopus"
version = "0.0.0"
description = "Flucto Octopus"
authors = ["Flucto GmbH <devel@flucto.tech>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/flucto-gmbh/octopus"
repository = "https://github.com/flucto-gmbh/octopus"
documentation = "https://octopus.readthedocs.io"
packages = [{ include = "octopus" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pytest-mock = "^3.11.1"
ruff = "^0.0.292"
pyupgrade = ">=2.29.1"
deptry = "^0.12.0"
mypy = "^1.8.0"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
ignore-init-module-imports = true
target-version = "py39"
line-length = 120
fix = true
select = [
  "YTT", # flake8-2020
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "SIM", # flake8-simplify
  "I",   # isort
  "C90", # mccabe
  "E",
  "W",   # pycodestyle
  "F",   # pyflakes
  "PGH", # pygrep-hooks
  "UP",  # pyupgrade
  "RUF", # ruff
  "TRY", # tryceratops
]
ignore = [
  "E501", # LineTooLong
  "E731", # DoNotAssignLambda
  "A001",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
