[project]
{% if cookiecutter.package_name != cookiecutter.project_name.replace('-', '_') -%}

{% endif -%}

name = "{{cookiecutter.project_name}}"
{%- if cookiecutter.vcs %}
dynamic = ["version"]
{%- else %}
version = "0.0.1"
{%- endif %}
description = "{{cookiecutter.friendly_name}}"
authors = [{ name = "{{cookiecutter.author}}", email =  "{{cookiecutter.email}}" }]
license = {file = "LICENSE"}
readme = "README.md"
packages = [{ include = "{{cookiecutter.package_name}}" }]
requires-python = ">=3.10"

[project.urls]
Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"
Documentation = "https://{{cookiecutter.project_name}}.readthedocs.io"
Homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
Repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"


[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.8",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]


[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "SIM", # flake8-simplify
    "I",   # isort
    "C90", # mccabe
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "PGH", # pygrep-hooks
    "UP",  # pyupgrade
    "RUF", # ruff
    "TRY", # tryceratops
]
ignore = [
    "E501", # LineTooLong
    "E731", # DoNotAssignLambda
    "A001",
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]

{%- if cookiecutter.vcs %}
[tool.hatch]
version.source = "vcs"
version.path = "src/{{cookiecutter.package_name}}/__init__.py"
{%- endif %}

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

